--- a/26-Capstone-projet/views/index.ejs
+++ b/26-Capstone-projet/views/index.ejs
@@ -1,3 +1,17 @@
 <%- include('partials/header.ejs') %>
 
+
+<section>
+    <h2>Latest Posts</h2>
+    <% if (locals.data) { %>
+        <% data.forEach(el => { %>
+            <h3><%= el.title %></h3>
+            <p> <%= el.content %></p>
+            <button type="submit">Read more</button>
+        <% }) %>
+    <% } %>
+        
+</section>
+
+
 <%- include('partials/footer.ejs') %>
