--- a/26-Capstone-projet/views/partials/header.ejs
+++ b/26-Capstone-projet/views/partials/header.ejs
@@ -13,3 +13,10 @@
 
 <body>
   <main>
+    <section>
+    <nav>
+        <p><a href="/">Home</a></p>
+        <p><a href="/about">About</a></p>
+        <p><a>Write Blog</a></p>
+    </nav>
+</section>
