--- a/28-APIs/5.4+API+Authentication/views/index.ejs
+++ b/28-APIs/5.4+API+Authentication/views/index.ejs
@@ -56,7 +56,9 @@
 
   <div class="response-area">
     <p>
+      <% if (locals.content){%>
       <%=content%>
+      <% } %>
     </p>
   </div>
 </body>
